--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,7 @@ set -g @plugin 'tmux-plugins/tpm' # Tmux Plugin Manager - https://github.com/tmu
 set -g @plugin 'tmux-plugins/tmux-sensible' # Better defaults - https://github.com/tmux-plugins/tmux-sensible
 set -g @plugin 'dreamsofcode-io/catppuccin-tmux' # Theme - https://github.com/dreamsofcode-io/catppuccin-tmux
 set -g @plugin 'tmux-plugins/tmux-resurrect' # Restore and save sessions (Ctrl+S, Ctrl+R)
+set -g @plugin 'tmux-plugins/tmux-continuum' # Automatically restore and save sessions 
 
 # Theme config
 set -g @catppuccin_flavour 'mocha'
@@ -10,6 +11,15 @@ set -g @catppuccin_flavour 'mocha'
 # Key bindings (M = Shift+Alt)
 bind -n M-H previous-window
 bind -n M-L next-window
+
+# Set vim keybidins for navigation
+set -g @plugin 'christoomey/vim-tmux-navigator'
+
+bind-key -T copy-mode-vi 'C-h' select-pane -L
+bind-key -T copy-mode-vi 'C-j' select-pane -D
+bind-key -T copy-mode-vi 'C-k' select-pane -U
+bind-key -T copy-mode-vi 'C-l' select-pane -R
+bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 # Options
 set -g mouse on # mouse support
@@ -29,6 +39,9 @@ set-option -g renumber-windows on
 # Open panes in current directory
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+
+# Automaticly restore on open
+set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
