--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,6 @@
 .config/*
 !.config/fish
 !.config/kitty
-!.config/kitty
 !.config/gramma
 .config/gramma/.*
 !.config/lazygit
@@ -22,4 +21,5 @@
 !.config/cmus
 .config/cmus/*
 !.config/cmus/*.theme
-
+!.config/polybar
+!.config/i3
