--- a/.config/i3/config
+++ b/.config/i3/config
@@ -54,8 +54,12 @@ bindsym $mod+Return exec kitty
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id "sh $HOME/.config/rofi/launchers/type-1/launcher.sh"
+# start launcher
+bindsym $mod+d exec --no-startup-id "bash $HOME/.config/rofi/launchers/type-1/launcher.sh"
+# start powertools
+bindsym $mod+Escape exec --no-startup-id "bash $HOME/.config/rofi/applets/bin/powermenu.sh"
+# start powertools
+bindsym --release Print exec --no-startup-id "bash $HOME/.config/rofi/applets/bin/screenshot.sh"
 
 # change focus
 bindsym $mod+j focus left
