--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,5 +1,5 @@
 [colors]
-background = #181825
+background = #11111b
 background-alt = #1e1e2e
 foreground = #cdd6f4
 primary = #cba6f7
@@ -32,8 +32,9 @@ separator-foreground = ${colors.disabled}
 
 font-0 = FiraCode Nerd Font:size=10;3
 
-modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
+modules-left = xworkspaces
+modules-center = xwindow
+modules-right = pulseaudio memory cpu wlan eth wifi date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -42,7 +43,7 @@ enable-ipc = true
 
 ; wm-restack = generic
 ; wm-restack = bspwm
-; wm-restack = i3
+wm-restack = i3
 
 ; override-redirect = true
 
@@ -89,13 +90,13 @@ label-unmounted-foreground = ${colors.disabled}
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = "VOL "
+format-volume-prefix = "  VOL "
 format-volume-prefix-foreground = ${colors.primary}
 format-volume = <label-volume>
 
 label-volume = %percentage%%
 
-label-muted = muted
+label-muted = "󰖁 muted"
 label-muted-foreground = ${colors.disabled}
 
 [module/xkeyboard]
@@ -113,14 +114,14 @@ label-indicator-background = ${colors.secondary}
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "RAM "
+format-prefix = "  RAM "
 format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
 
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "CPU "
+format-prefix = "  CPU "
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
 
@@ -141,11 +142,28 @@ inherit = network-base
 interface-type = wired
 label-connected = %{F#CBA6F7}%ifname%%{F-} %local_ip%
 
+[module/wifi]
+type = internal/network
+interface = wlp2s0
+interval = 1.0
+
+format-connected = <label-connected>
+label-connected =   Online
+label-connected-background = ${colors.background}
+label-connected-foreground = ${colors.secondary}
+label-connected-padding = 1
+
+format-disconnected = <label-disconnected>
+label-disconnected = 󱛅  Offline
+label-disconnected-background = ${colors.background}
+label-disconnected-foreground = ${colors.alert}
+label-disconnected-padding = 1
+
 [module/date]
 type = internal/date
 interval = 1
 
-date = %H:%M
+date = %Y-%m-%d %H:%M
 date-alt = %Y-%m-%d %H:%M:%S
 
 label = %date%
