--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -148,13 +148,13 @@ interface = wlp2s0
 interval = 1.0
 
 format-connected = <label-connected>
-label-connected =   Online
+label-connected = %{A1:nm-connection-editor:}  Online%{A}
 label-connected-background = ${colors.background}
 label-connected-foreground = ${colors.secondary}
 label-connected-padding = 1
 
 format-disconnected = <label-disconnected>
-label-disconnected = 󱛅  Offline
+label-disconnected = %{A1:nm-connection-editor:}󱛅  Offline%{A}
 label-disconnected-background = ${colors.background}
 label-disconnected-foreground = ${colors.alert}
 label-disconnected-padding = 1
