Fixed clear command in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,7 @@ set -g @catppuccin_flavour 'mocha'
 # Key bindings (M = Shift+Alt)
 bind -n M-H previous-window
 bind -n M-L next-window
+bind -n C-F send-keys 'C-f'
 
 # Set vim keybidins for navigation
 set -g @plugin 'christoomey/vim-tmux-navigator'
