--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible' # Better defaults - https://github.c
 set -g @plugin 'dreamsofcode-io/catppuccin-tmux' # Theme - https://github.com/dreamsofcode-io/catppuccin-tmux
 set -g @plugin 'tmux-plugins/tmux-resurrect' # Restore and save sessions (Ctrl+S, Ctrl+R)
 set -g @plugin 'tmux-plugins/tmux-continuum' # Automatically restore and save sessions 
+set -g @plugin 'jimeh/tmuxifier' # Project setup (layout and apps)
 
 # Theme config
 set -g @catppuccin_flavour 'mocha'
