--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,10 +1,7 @@
-# Switch xorg to Nvidia
-exec xrandr --setprovideroutputsource modesetting NVIDIA-0
-exec xrandr --auto
-exec xrandr --dpi 96
+# Switch xorg to Nvidia and setup monitors
+exec_always $HOME/.config/i3/set_desktop.sh
 
-# rearange monitors
-exec_always --no-startup-id xrandr --output VGA-1-1 --left-of LVDS-1-1
+# Set initial workspaces
 workspace 1 output LVDS-1-1
 workspace 10 output VGA-1-1
 
@@ -57,20 +54,20 @@ bindsym $mod+Escape exec --no-startup-id "bash $HOME/.config/rofi/applets/bin/po
 bindsym --release Print exec --no-startup-id "bash $HOME/.config/rofi/applets/bin/screenshot.sh"
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
+bindsym $mod+h focus left
+bindsym $mod+j focus down
+bindsym $mod+k focus up
+bindsym $mod+l focus right
 
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
 # move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+semicolon move right
+bindsym $mod+Shift+h move left
+bindsym $mod+Shift+j move down
+bindsym $mod+Shift+k move up
+bindsym $mod+Shift+l move right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -78,8 +75,8 @@ bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
-# split in horizontal orientation
-bindsym $mod+h split h
+# split in horizontal orientation (rebinded to have Vim movements)
+bindsym $mod+semicolon split h
 
 # split in vertical orientation
 bindsym $mod+v split v
@@ -156,10 +153,10 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
+        bindsym h resize shrink width 10 px or 10 ppt
+        bindsym j resize grow height 10 px or 10 ppt
+        bindsym k resize shrink height 10 px or 10 ppt
+        bindsym l resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
@@ -217,3 +214,7 @@ exec_always --no-startup-id /usr/libexec/gsd-xsettings
 
 # always floating (get class via `xprop` command)
 for_window [class="Nm-connection-editor"] floating enable
+
+# disable autofocus for some windowa
+no_focus [class="love"]
+focus_on_window_activation none
