--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -4,17 +4,17 @@
 # bold/italic/bold-italic variants. By default they are derived automatically,
 # by the OSes font system. Setting them manually is useful for font families
 # that have many weight variants like Book, Medium, Thick, etc. For example:
-font_family      Fira Code Nerd Font
-italic_font      auto
+font_family      FiraCode Nerd Font
+italic_font      Recursive Mono Casual Static
 bold_font        auto
-bold_italic_font auto
+bold_italic_font Recursive Mono Casual Static
 
 # Adjust the line height. 
 # You can use either numbers, which are interpreted as pixels or percentages
 # (number followed by %), which are interpreted as percentages of the
 # unmodified line height. You can use negative pixels or percentages less than
 # 100% to reduce line height (but this might cause rendering artifacts).
-adjust_line_height 120%
+adjust_line_height 140%
 
 # Font size (in pts)
 font_size        11.0
