--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -33,7 +33,7 @@ separator-foreground = ${colors.disabled}
 font-0 = FiraCode Nerd Font:size=10;3
 
 modules-left = xworkspaces
-modules-center = xwindow
+modules-center = xwindow cmus
 modules-right = pulseaudio memory cpu wlan eth wifi date
 
 cursor-click = pointer
@@ -74,7 +74,16 @@ label-empty-padding = 1
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:60:...%
+label = %title:0:40:...%
+
+[module/cmus]
+type = custom/script
+exec = node ~/.config/polybar/cmus.mjs
+interval = 1
+label-font = 3
+label-foreground = ${colors.primary}
+format = <label>
+label = %output%
 
 [module/filesystem]
 type = internal/fs
@@ -156,7 +165,7 @@ label-connected-padding = 1
 format-disconnected = <label-disconnected>
 label-disconnected = %{A1:nm-connection-editor:}󱛅  Offline%{A}
 label-disconnected-background = ${colors.background}
-label-disconnected-foreground = ${colors.alert}
+label-disconnected-foreground =Vy ${colors.alert}
 label-disconnected-padding = 1
 
 [module/date]
