Switched polybar cmus plugint to Lua (faster and cheaper)

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -32,8 +32,8 @@ separator-foreground = ${colors.disabled}
 
 font-0 = FiraCode Nerd Font:size=10;3
 
-modules-left = xworkspaces
-modules-center = xwindow cmus
+modules-left = xworkspaces cmus
+modules-center = xwindow
 modules-right = pulseaudio memory cpu wlan eth wifi date
 
 cursor-click = pointer
@@ -74,16 +74,16 @@ label-empty-padding = 1
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:40:...%
+label = %title:0:60:...%
 
 [module/cmus]
 type = custom/script
-exec = node ~/.config/polybar/cmus.mjs
+exec = luajit ~/.config/polybar/cmus.lua
+exec-if = pgrep -x cmus
 interval = 1
-label-font = 3
-label-foreground = ${colors.primary}
 format = <label>
-label = %output%
+label-foreground = ${colors.primary}
+label = %{A1:cmus-remote -r:} %{A} %{A1:cmus-remote -n:} %{A} %{A1:cmus-remote -u:}%output%%{A}
 
 [module/filesystem]
 type = internal/fs
