Added clickable polybar cpu and mem stats (open btop)

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -125,14 +125,14 @@ type = internal/memory
 interval = 2
 format-prefix = "  RAM "
 format-prefix-foreground = ${colors.primary}
-label = %percentage_used:2%%
+label = %{A1:kitty btop:}%percentage_used:2%%%{A}
 
 [module/cpu]
 type = internal/cpu
 interval = 2
 format-prefix = "  CPU "
 format-prefix-foreground = ${colors.primary}
-label = %percentage:2%%
+label = %{A1:kitty btop:}%percentage:2%%%{A}
 
 [network-base]
 type = internal/network
@@ -172,8 +172,7 @@ label-disconnected-padding = 1
 type = internal/date
 interval = 1
 
-date = %Y-%m-%d %H:%M
-date-alt = %Y-%m-%d %H:%M:%S
+date = %{A1:gnome-calendar:}%Y-%m-%d %H:%M%{A}
 
 label = %date%
 label-foreground = ${colors.primary}
