Improved polybar cmus plugin

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -41,11 +41,7 @@ cursor-scroll = ns-resize
 
 enable-ipc = true
 
-; wm-restack = generic
-; wm-restack = bspwm
 wm-restack = i3
-
-; override-redirect = true
 
 [module/systray]
 type = internal/tray
@@ -83,7 +79,7 @@ exec-if = pgrep -x cmus
 interval = 1
 format = <label>
 label-foreground = ${colors.primary}
-label = %{A1:cmus-remote -r:} %{A} %{A1:cmus-remote -n:} %{A} %{A1:cmus-remote -u:}%output%%{A}
+label = %output%
 
 [module/filesystem]
 type = internal/fs
@@ -172,7 +168,7 @@ label-disconnected-padding = 1
 type = internal/date
 interval = 1
 
-date = %{A1:gnome-calendar:}%Y-%m-%d %H:%M%{A}
+date = %{A1:gnome-calendar:}%a, %d %b %Y, %H:%M%{A}
 
 label = %date%
 label-foreground = ${colors.primary}
@@ -180,6 +176,4 @@ label-foreground = ${colors.primary}
 [settings]
 screenchange-reload = true
 pseudo-transparency = true
-
-; vim:ft=dosini
 
