Improved polybar cmus plugin

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -80,6 +80,7 @@ interval = 1
 format = <label>
 label-foreground = ${colors.primary}
 label = %output%
+; label = %output:0:250:...%
 
 [module/filesystem]
 type = internal/fs
