Improved polybar cmus plugin

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -5,7 +5,7 @@ foreground = #cdd6f4
 primary = #cba6f7
 secondary = #a6e3a1
 alert = #f38ba8
-disabled = #313244
+disabled = #585b70
 
 [bar/main]
 width = 100%
@@ -136,7 +136,7 @@ type = internal/network
 interval = 5
 format-connected = <label-connected>
 format-disconnected = <label-disconnected>
-label-disconnected = %{F#CBA6F7}%ifname%%{F#313244} disconnected
+label-disconnected = %{F#CBA6F7}%ifname%%{F#585b70} disconnected
 
 [module/wlan]
 inherit = network-base
