Improved polybar cmus plugin

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -31,10 +31,11 @@ separator = |
 separator-foreground = ${colors.disabled}
 
 font-0 = FiraCode Nerd Font:size=10;3
+font-1 = Recursive Mono Casual Static:size=10;3
 
 modules-left = xworkspaces cmus
 modules-center = xwindow
-modules-right = pulseaudio memory cpu wlan eth wifi date
+modules-right = pulseaudio memory cpu temperature wlan eth wifi date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -42,6 +43,9 @@ cursor-scroll = ns-resize
 enable-ipc = true
 
 wm-restack = i3
+
+[module/temperature]
+type = internal/temperature
 
 [module/systray]
 type = internal/tray
@@ -76,7 +80,8 @@ label = %title:0:50:...%
 type = custom/script
 exec = luajit ~/.config/polybar/cmus.lua
 exec-if = pgrep -x cmus
-interval = 1
+interval = 0.2
+interval-if = 1
 format = <label>
 label-foreground = ${colors.primary}
 label = %output%
@@ -154,13 +159,13 @@ interface = wlp2s0
 interval = 1.0
 
 format-connected = <label-connected>
-label-connected = %{A1:nm-connection-editor:}  Online%{A}
+label-connected = %{A1:nm-connection-editor:} %{A}
 label-connected-background = ${colors.background}
 label-connected-foreground = ${colors.secondary}
 label-connected-padding = 1
 
 format-disconnected = <label-disconnected>
-label-disconnected = %{A1:nm-connection-editor:}󱛅  Offline%{A}
+label-disconnected = %{A1:nm-connection-editor:}󱛅 %{A}
 label-disconnected-background = ${colors.background}
 label-disconnected-foreground =Vy ${colors.alert}
 label-disconnected-padding = 1
