--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -4,10 +4,13 @@
 # bold/italic/bold-italic variants. By default they are derived automatically,
 # by the OSes font system. Setting them manually is useful for font families
 # that have many weight variants like Book, Medium, Thick, etc. For example:
-font_family      FiraCode Nerd Font
-italic_font      Recursive Mono Casual Static
-bold_font        auto
-bold_italic_font Recursive Mono Casual Static
+# font_family      FiraCode Nerd Font
+font_family      RecMonoLinear Nerd Font Mono
+bold_font        RecMonoLinear Nerd Font Mono
+# font_family      RecMonoCasual Nerd Font Mono
+# bold_font        RecMonoCasual Nerd Font Mono
+italic_font      RecMonoCasual Nerd Font Mono
+bold_italic_font RecMonoCasual Nerd Font Mono
 
 # Adjust the line height. 
 # You can use either numbers, which are interpreted as pixels or percentages
@@ -17,7 +20,7 @@ bold_italic_font Recursive Mono Casual Static
 adjust_line_height 140%
 
 # Font size (in pts)
-font_size        11.0
+font_size        12.0
 
 # The background
 background_opacity 1
