--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -78,7 +78,7 @@ label = %title:0:50:...%
 
 [module/cmus]
 type = custom/script
-exec = luajit ~/.config/polybar/cmus.lua
+exec = lua ~/.config/polybar/cmus.lua
 exec-if = pgrep -x cmus
 interval = 0.2
 interval-if = 1
