--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -33,6 +33,9 @@ shell_integration  no-cursor
 # The interval (in seconds) at which to blink the cursor. Set to zero to
 # disable blinking.
 cursor_blink_interval     0.5
+cursor_trail 10
+# cursor_trail_decay 0.1 0.4
+# cursor_trail_start_threshold 2
 
 # Stop blinking cursor after the specified number of seconds of keyboard inactivity. Set to
 # zero or a negative number to never stop blinking.
