--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -30,8 +30,10 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = FiraCode Nerd Font:size=10;3
-font-1 = Recursive Mono Casual Static:size=10;3
+;font-0 = RecMonoLinear Nerd Font Mono:size=10;3
+;font-1 = RecMonoCasual Nerd Font Mono:size=10;3
+font-0 = FiraCode Nerd Font Mono:size=11;3
+font-1 = FiraCode Nerd Font Mono:size=13;3
 
 modules-left = xworkspaces cmus
 modules-center = xwindow
@@ -100,13 +102,13 @@ label-unmounted-foreground = ${colors.disabled}
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = "  VOL "
+format-volume-prefix = "%{T2}%{T-} VOL "
 format-volume-prefix-foreground = ${colors.primary}
 format-volume = <label-volume>
 
 label-volume = %percentage%%
 
-label-muted = "󰖁 muted"
+label-muted = "%{T2}󰖁%{T-} muted"
 label-muted-foreground = ${colors.disabled}
 
 [module/xkeyboard]
@@ -124,14 +126,14 @@ label-indicator-background = ${colors.secondary}
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "  RAM "
+format-prefix = "%{T2}%{T-} RAM "
 format-prefix-foreground = ${colors.primary}
 label = %{A1:kitty btop:}%percentage_used:2%%%{A}
 
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "  CPU "
+format-prefix = "%{T2}%{T-} CPU "
 format-prefix-foreground = ${colors.primary}
 label = %{A1:kitty btop:}%percentage:2%%%{A}
 
@@ -158,22 +160,23 @@ interface = wlp2s0
 interval = 1.0
 
 format-connected = <label-connected>
-label-connected = %{A1:nm-connection-editor:} %{A}
+label-connected = %{A1:nm-connection-editor:}%{T2}%{T-}%{A}
 label-connected-background = ${colors.background}
 label-connected-foreground = ${colors.secondary}
 label-connected-padding = 1
 
 format-disconnected = <label-disconnected>
-label-disconnected = %{A1:nm-connection-editor:}󱛅 %{A}
+label-disconnected = %{A1:nm-connection-editor:}%{T2}󱛅%{T-}%{A}
 label-disconnected-background = ${colors.background}
-label-disconnected-foreground =Vy ${colors.alert}
+label-disconnected-foreground = ${colors.alert}
 label-disconnected-padding = 1
 
 [module/date]
 type = internal/date
 interval = 1
 
-date = %{A1:gnome-calendar:}%a, %d %b %Y, %H:%M%{A}
+;date = %{A1:gnome-calendar:}%a, %d %b %Y, %H:%M%{A}
+date = %{A1:gnome-calendar:}%a %d %b %{F#585b70}|%{F#cba6f7} %H:%M%{A}
 
 label = %date%
 label-foreground = ${colors.primary}
