--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -33,7 +33,7 @@ separator-foreground = ${colors.disabled}
 ;font-0 = RecMonoLinear Nerd Font Mono:size=10;3
 ;font-1 = RecMonoCasual Nerd Font Mono:size=10;3
 font-0 = FiraCode Nerd Font Mono:size=11;3
-font-1 = FiraCode Nerd Font Mono:size=13;3
+font-1 = FiraCode Nerd Font Mono:size=16;3
 
 modules-left = xworkspaces cmus
 modules-center = xwindow
@@ -102,7 +102,7 @@ label-unmounted-foreground = ${colors.disabled}
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = "%{T2}%{T-} VOL "
+format-volume-prefix = "%{T2}%{T-} "
 format-volume-prefix-foreground = ${colors.primary}
 format-volume = <label-volume>
 
@@ -126,14 +126,14 @@ label-indicator-background = ${colors.secondary}
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "%{T2}%{T-} RAM "
+format-prefix = "%{T2}%{T-} "
 format-prefix-foreground = ${colors.primary}
 label = %{A1:kitty btop:}%percentage_used:2%%%{A}
 
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "%{T2}%{T-} CPU "
+format-prefix = "%{T2}%{T-} "
 format-prefix-foreground = ${colors.primary}
 label = %{A1:kitty btop:}%percentage:2%%%{A}
 
